--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShopEase - Your Online Store</title>
+    <title>Kingsnetium - Your Online Store</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <h1>ShopEase</h1>
+                <h1>kingsnetium</h1>
             </div>
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
@@ -42,7 +42,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h2>Summer Collection 2024</h2>
+                <h2>kings collection 2025</h2>
                 <p>Discover the latest trends and styles</p>
                 <a href="shop.html" class="cta-button">Shop Now</a>
             </div>
@@ -109,8 +109,8 @@
                     <div class="product-info">
                         <h3>Rustic Farmhouse Dining Table</h3>
                         <div class="product-price">
-                            <span class="current-price">$899.99</span>
-                            <span class="original-price">$1,199.99</span>
+                            <span class="current-price">$89999999k</span>
+                            <span class="original-price">sh200k</span>
                         </div>
                         <div class="product-rating">
                             <i class="fas fa-star"></i>
@@ -248,7 +248,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 ShopEase. All rights reserved.</p>
+                <p>&copy; 2025 kingsnetium. All rights reserved.</p>
             </div>
         </div>
     </footer>
